Only some vertex weights can be modified via the UI panel #112123

Closed
opened 2023-09-08 10:16:18 +02:00 by Malcolm Reed · 9 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99

Blender Version
Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-06 20:19, hash: c8c6f62cf3a3
Worked: (newest version of Blender that worked as expected)

Short description of error
Not sure if there is a fix for this one coming soon - couldn't find it on a quick search - there were similar issues but not exact.

  • Only some vertices are editable via the Item/Vertex Weights panel.
  • Copying does seem to work though.

Only difference I can think of is that the belt of the character was modelled and weighted in this release candidate, but the body wasn't.

Exact steps for others to reproduce the error
Load the attached Blend file.
Enter edit mode
Select some verts like in the images supplied and see which are editable.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99 **Blender Version** Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-06 20:19, hash: `c8c6f62cf3a3` Worked: (newest version of Blender that worked as expected) **Short description of error** Not sure if there is a fix for this one coming soon - couldn't find it on a quick search - there were similar issues but not exact. - Only some vertices are editable via the Item/Vertex Weights panel. - Copying does seem to work though. Only difference I can think of is that the belt of the character was modelled and weighted in this release candidate, but the body wasn't. **Exact steps for others to reproduce the error** Load the attached Blend file. Enter edit mode Select some verts like in the images supplied and see which are editable.
Malcolm Reed added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-09-08 10:16:19 +02:00
Member

Hi, thanks for the report. This has been fixed in already in 4.0
Fix will also be part of 3.6.3 release: #111273, closing.

Hi, thanks for the report. This has been fixed in already in 4.0 Fix will also be part of 3.6.3 release: #111273, closing.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-09-08 10:44:13 +02:00
Author
First-time contributor

OK thanks, just want to make sure it's the same issue. As the issue in #111273 was present in 3.6.2

It was suggested (after reporting it as a duplicated bug that it was fixed in the release candidate for 3.6.3).
It's partly fixed, but now I have these issues which present themselves differently to those in #111273.

OK thanks, just want to make sure it's the same issue. As the issue in #111273 was present in 3.6.2 It was suggested (after reporting it as a duplicated bug that it was fixed in the release candidate for 3.6.3). It's partly fixed, but now I have these issues which present themselves differently to those in #111273.
Member

I'll check again in recent 3.6.3 build
4.0 did not trigger the issue mentioned here

I'll check again in recent 3.6.3 build 4.0 did not trigger the issue mentioned here
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-09-08 13:15:06 +02:00

I can confirm the problem when Vertex is in many Vertex Groups:
GIF.gif

It happens in 3.6.3 but not in 4.0

I can confirm the problem when Vertex is in many Vertex Groups: ![GIF.gif](/attachments/dbf46445-8967-49fe-bdff-be3bcb254905) It happens in 3.6.3 but not in 4.0
266 KiB
Member

@JacquesLucke : mind checking?

@JacquesLucke : mind checking?
Member

Not sure what I'm doing wrong, but I can't reproduce it in c8c6f62cf3. Can someone provide a .blend file that's already in the state where the values can't be edited (so that I don't have to enter edit mode and have select something specific anymore)?

Not sure what I'm doing wrong, but I can't reproduce it in c8c6f62cf3a3e4a885baa4a0f427d41c8249a1ef. Can someone provide a .blend file that's already in the state where the values can't be edited (so that I don't have to enter edit mode and have select something specific anymore)?

The provided blend file is already saved in a state that can be replicated (you just need to enter edit mode). And replicable with c8c6f62cf3.

If it is not replicable for some, it may depend on the operating system.

System Information
  • Operating system: Windows-10-10.0.22621-SP0 64 Bits
  • Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 528.79
The provided blend file is already saved in a state that can be replicated (you just need to enter edit mode). And replicable with c8c6f62cf3. If it is not replicable for some, it may depend on the operating system. <details> <summary>System Information</summary> <ul> <li>Operating system: Windows-10-10.0.22621-SP0 64 Bits</li> <li>Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 528.79</li> </ul> </details>
Philipp Oeser added this to the 3.6 LTS milestone 2023-09-13 11:24:33 +02:00
Member

I attached a video just to show that this works for me on Linux. Will try to make a fix anyway even if I can replicate it, just got an idea for that.

I attached a video just to show that this works for me on Linux. Will try to make a fix anyway even if I can replicate it, just got an idea for that.
Member

If I understand correctly, the issue should already show by inspecting the cursor.
So if you hover over the slider and DONT get the horizontal arrows, you are running into the bug, right?
What happens if you drag the slider then?

In todays 3.6.3RC ( e2f9c9892e ), it seems I cannot reproduce on linux

System Information
  • Operating system: Linux-6.4.13-200.fc38.x86_64-x86_64-with-glibc2.37 64 Bits, WAYLAND UI
  • Graphics card: AMD Radeon Graphics (renoir, LLVM 16.0.6, DRM 3.52, 6.4.13-200.fc38.x86_64) AMD 4.6 (Core Profile) Mesa 23.1.6
  • version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-13 14:58, hash: `e2f9c9892e48`

If I understand correctly, the issue should already show by inspecting the cursor. So if you hover over the slider and DONT get the horizontal arrows, you are running into the bug, right? What happens if you drag the slider then? In todays 3.6.3RC ( e2f9c9892e48 ), it seems I cannot reproduce on linux <details> <summary>System Information</summary> <ul> <li>Operating system: Linux-6.4.13-200.fc38.x86_64-x86_64-with-glibc2.37 64 Bits, WAYLAND UI</li> <li>Graphics card: AMD Radeon Graphics (renoir, LLVM 16.0.6, DRM 3.52, 6.4.13-200.fc38.x86_64) AMD 4.6 (Core Profile) Mesa 23.1.6</li> <li>version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-13 14:58, hash: `e2f9c9892e48`</li> </ul> </details> <video src="/attachments/1566de67-fcd6-4d4b-9f6d-f4fbbde49a69" title="112123.webm" controls></video>
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-15 15:03:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112123
No description provided.